--- a/leopard.yaml
+++ b/leopard.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Luke
 
-<<<<<<< HEAD
-coach: Nicholas
-=======
 coach: Melissa
->>>>>>> 5e8ceea (Edit Leopards)
 
 members:
 - Linda
 - William
 - David
 - Olivia
+- Evie
