--- a/tiger.yaml
+++ b/tiger.yaml
@@ -2,7 +2,7 @@ team: Tigers
 
 manager: Thanos
 
-coach: Ronan
+coach: Conan
 
 members:
 - Linda
@@ -10,3 +10,4 @@ members:
 - David
 - Gamora
 - Nebula
+- Miran
